# Task_with_names

./: README.md  pyproject.toml
data/: names.txt
src/: main.py
